--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "dotenv": "^8.2.0",
     "mdbreact": "^4.27.0",
+    "mongoose": "^5.9.20",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "resolve-url-loader": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bootstrap": "^5.0.0-alpha1",
+    "bootstrap-loader": "^3.0.4",
+    "jquery": "^3.5.1",
+    "tether": "^1.4.7"
   }
 }
