--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ajs3993.github.io/DogGroomingApp/",
   "name": "doggroomingapp",
   "version": "0.1.0",
   "private": true,
